--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,17 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* Styling for quotes in markdown */
+blockquote>p {
+    font-style: italic;
+    font-size: larger;
+    border-left: 6px solid;
+    padding-left: 0.6em;
+}
+
+/* ensure the images are displayed with similar ratios */
+.tile-image {
+    object-fit: cover;
+    aspect-ratio: 2.16;
+}
