--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,3 +15,13 @@ blockquote>p {
     object-fit: cover;
     aspect-ratio: 2.16;
 }
+
+.btn {
+    @apply font-bold py-2 px-4 rounded;
+  }
+  .btn-blue {
+    @apply bg-blue-500 text-white;
+  }
+  .btn-blue:hover {
+    @apply bg-blue-700;
+  }
